--- a/src/app/logg-out/logg-out.component.html
+++ b/src/app/logg-out/logg-out.component.html
@@ -1,7 +1,5 @@
-<div>
-    <!-- <input (change)="handleInputChange($event)" />
-    <p [ngStyle]="pStyle">Logged in as {{ login }}</p> -->
-    <button (click)="handleButtonClick($event)">Change classname to red</button>
-    <p [ngClass]="isClassRed ? 'red' : 'green'">Logged in as {{ login }}</p>
-    <button (click)="doLogOut()">Log out</button>
-</div>
+<input (change)="handleInputChange($event)" placeholder="enter param ID" />
+<button (click)="redirect()">Redirect</button>
+
+{{ smth }}
+<router-outlet />
