--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,1 @@
-<!-- lesson 2, data binding and data manipulation -->
-<!-- <div>
-  <input [(ngModel)]="login" placeholder="login" />
-  <input [(ngModel)]="password" placeholder="password" />
-  <button (click)="doLogin()">Login</button>
-  <ng-template ngIf="isAuthorized">
-    <div>
-      <app-logg-out [login]="login" [doLogOut]="doLogOut" />
-    </div>
-  </ng-template>
-  <div *ngIf="isAuthorized">
-    <app-logg-out [login]="login" [doLogOut]="doLogOut" />
-  </div>
-</div> -->
-
-
-<!-- <app-header />
-
-<app-sidemenu />
-
-<router-outet />
-
-<app-footer /> -->
-
-<!-- <app-header /> -->
-<!-- nav -->
-<nav>
-  <img (click)="" />
-  <button (click)=""></button>
-  <a [routerLink]="['first-component']">Component 1</a>
-  <a [routerLink]="['second-component']">Component 2</a>
-</nav>
-
-<!-- side menu -->
-
-<!-- footer -->
-<!-- <a /> -->
-
-<router-outlet />
+<app-emitter-test [myVar]="myProperty" (eventClicked)="checkIfSomeoneClickedButtonInChild()" />
